--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "scripts": {
     "dev": "vite",
+    "dev:home": "vite --mode home --host",
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint . --fix",
@@ -17,6 +18,7 @@
     "@lottiefiles/dotlottie-vue": "^0.9.1",
     "@lucky-canvas/vue": "^0.1.11",
     "axios": "^1.11.0",
+    "dayjs": "^1.11.15",
     "pinia": "^3.0.3",
     "vant": "^4.9.21",
     "vconsole": "^3.15.1",
