--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "axios": "^1.11.0",
     "dayjs": "^1.11.15",
     "pinia": "^3.0.3",
+    "qrcode": "^1.5.4",
+    "query-string": "^9.2.2",
     "vant": "^4.9.21",
     "vconsole": "^3.15.1",
     "vue": "^3.5.18",
@@ -33,6 +35,7 @@
     "eslint": "^9.31.0",
     "eslint-plugin-vue": "~10.3.0",
     "globals": "^16.3.0",
+    "less": "^4.4.1",
     "prettier": "3.6.2",
     "vite": "^7.0.6",
     "vite-plugin-vue-devtools": "^8.0.0"
