feat: 实现用户注册和绑定功能
- 新增用户注册功能，支持昵称、账号和密码注册
- 实现用户绑定功能，生成二维码并处理扫描结果
- 优化登录界面，增加注册入口
- 重构 App.vue，采用路由视图
- 更新路由配置，增加邀请页面

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": "^20.19.0 || >=22.12.0"
   },
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "dev:home": "vite --mode home --host",
     "build": "vite build",
     "preview": "vite preview",
@@ -20,6 +20,7 @@
     "axios": "^1.11.0",
     "dayjs": "^1.11.15",
     "pinia": "^3.0.3",
+    "pubsub-js": "^1.9.5",
     "qrcode": "^1.5.4",
     "query-string": "^9.2.2",
     "vant": "^4.9.21",
