--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "vant": "^4.9.21",
     "vconsole": "^3.15.1",
     "vue": "^3.5.18",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "vue3-clipboard": "^1.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.31.0",
