--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint . --fix",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "publish": "./scripts/publish.sh"
   },
   "dependencies": {
     "@lottiefiles/dotlottie-vue": "^0.9.1",
